@@ -1,19 +1,56 @@
 plugins {
     id("java")
+    `maven-publish`
 }
 
-group = "org.example"
+group = "net.botwithus.debug"
 version = "1.0-SNAPSHOT"
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+    maven {
+        setUrl("https://nexus.botwithus.net/repository/maven-snapshots/")
+    }
+}
+
+configurations {
+    create("includeInJar") {
+        this.isTransitive = false
+    }
+}
+
+tasks.withType<JavaCompile> {
+    options.compilerArgs.add("--enable-preview")
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.9.1"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    implementation("net.botwithus.rs3:botwithus-api:1.0.0-SNAPSHOT")
+    implementation("net.botwithus.xapi.public:api:1.0.0-SNAPSHOT")
+    "includeInJar"("net.botwithus.xapi.public:api:1.0.0-SNAPSHOT")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
+    implementation("com.google.code.gson:gson:2.10.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
 }
 
-tasks.test {
+val copyJar by tasks.register<Copy>("copyJar") {
+    from("build/libs/")
+    into("${System.getProperty("user.home")}\\BotWithUs\\scripts\\local\\")
+    include("*.jar")
+}
+
+tasks.named<Jar>("jar") {
+    from({
+        configurations["includeInJar"].map { zipTree(it) }
+    })
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    finalizedBy(copyJar)
+}
+
+tasks.getByName<Test>("test") {
     useJUnitPlatform()
 }
